--- a/src/main/html/five-in-a-row.html
+++ b/src/main/html/five-in-a-row.html
@@ -37,11 +37,15 @@ let viewCell = rd.parse(`
 		'
 		rd_on_click='handleclick(vm, ev)'>
 		<rd_if v='vm.d &lt; 0'><font color='grey'>💀</font></rd_if>
-		<rd_if v='vm.d == 0'><font color='yellow'>😂</font></rd_if>
+		<rd_if v='vm.d == 0'><font color='yellow'>🍋</font></rd_if><!-- 😂 -->
 		<rd_if v='vm.d == 1'><font color='green'>🌲</font></rd_if>
 		<rd_if v='vm.d == 2'><font color='red'>💖</font></rd_if>
 		<rd_if v='vm.d == 3'><font color='blue'>🐬</font></rd_if>
 		<rd_if v='vm.d == 4'><font color='brown'>🐵</font></rd_if>
+		<rd_if v='vm.d == 5'><font color='orange'>🍊</font></rd_if>
+		<rd_if v='vm.d == 6'><font color='purple'>🍇</font></rd_if>
+		<rd_if v='vm.d == 7'><font color='white'>💮</font></rd_if>
+		<rd_if v='vm.d == 8'><font color='black'>✴️</font></rd_if>
 	</div>
 `);
 
